Worked on create new patient and Patient detail

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -57,6 +57,7 @@
 		"Staff_SENDREC": "ارسال استمارة التوظيف",
 		"profile": "الملف الشخصي",
 		"information": "معلومات",
+		"created_user_id_and_pin":"تم إنشاؤه_المستخدم_و_التثبيت",
 		"profile_info": "هذه هي معلومات ملفك الشخصي، والتي يمكن الوصول إليها من قبل أطبائك الموثوق بهم وأولئك الذين تشارك ID ملفك الشخصي ورقم PIN معهم.",
 		"ID": "ID",
 		"speciality": "التخصص",
