--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -58,6 +58,7 @@
 		"Staff_SENDREC": "SEND RECRUITMENT FORM",
 		"profile": "Profil",
 		"information": "Information",
+		"created_user_id_and_pin": "Benutzer-ID und PIN erstellt",
 		"profile_info": "Dies sind Ihre Profilinformationen, auf die Ärzte Ihres Vertrauens und diejenigen, mit denen Sie Ihre Profil-ID und PIN teilen, zugreifen können.",
 		"ID": "ID",
 		"speciality": "Fachbereich",
@@ -1132,129 +1133,129 @@
 		"Search": "Suche",
 		"Date_of_event": "Datum der Veranstaltung",
 		"consultancy_appintment": "Beratungstermin",
-		"pin_greater_then_4" : "Die PIN muss größer als 3 Zeichen sein",
-		"unblock_user":"Nutzer entblockieren",
-		"block_user":"Benutzer blockieren",
-		"Options":"Optionen",
-		"had_miss_call_from":" hatte Anruf von verpasst ",
+		"pin_greater_then_4": "Die PIN muss größer als 3 Zeichen sein",
+		"unblock_user": "Nutzer entblockieren",
+		"block_user": "Benutzer blockieren",
+		"Options": "Optionen",
+		"had_miss_call_from": " hatte Anruf von verpasst ",
 		"had_rejected_call": " hatte Anruf mit abgelehnt ",
 		"had_joined_call_with": " hatte sich dem Anruf mit angeschlossen ",
 		"had_initiated_call_with": " hatte den Anruf mit initiiert ",
 		"ended_call_with": " beendete den Anruf mit ",
 		"cancelled_call_with": " hat den Anruf mit abgebrochen ",
 		"addentry": "Eintrag hinzufügen",
-		"InsurancecompanyError" : "Bitte füllen Sie das Land Pharma / Forschung / Versicherung und Pharma / Forschung / Versicherung aus",
-		"StartDate" :"Von",
-		"EndDate" :"Bis",
-		"enabled":"aktiviert",
-		"disabled":"behindert",
-		"Loading":"Wird geladen...",
-		"language_all":"Sprache: Alle",
-		"goto_top":"Zur Spitze gehen",
-		"Consultancy_custom_calendar" : "Benutzerdefinierter Beratungskalender",
-		"Calling" :"Berufung...",
+		"InsurancecompanyError": "Bitte füllen Sie das Land Pharma / Forschung / Versicherung und Pharma / Forschung / Versicherung aus",
+		"StartDate": "Von",
+		"EndDate": "Bis",
+		"enabled": "aktiviert",
+		"disabled": "behindert",
+		"Loading": "Wird geladen...",
+		"language_all": "Sprache: Alle",
+		"goto_top": "Zur Spitze gehen",
+		"Consultancy_custom_calendar": "Benutzerdefinierter Beratungskalender",
+		"Calling": "Berufung...",
 		"incomingcall": "Eingehender Anruf",
 		"Online": "online",
 		"Offline": "offline",
 		"Lao": "Zuletzt aktiv bei:",
-		"VaccinationTrial":"COVID-19-Impfstudie",
-		"SARSCoV_2_TEST":"SARS CoV-2 Ag-Test",
-		"time_of_vaccination" :"Zeitpunkt der Impfung",
-		"Daydate":"Anzahl der Tage nach der Impfung",
-		"PositiveSARS" :"Positiver SARS CoV-2 IgG, IgM, AG Test?",
-		"Chargenumberpicture" :"Chargennummer Bild",
-		"VaccinationCharge":"Impfgebühr",
-		"DocAuthName" :"Behörde / Krankenhaus / Arzt, der geimpft hat",
-		"Newdiagnoses" :"Neue Diagnosen",
-		"Newmedication" : "Neue Medikamente",
-		"Newallergies":"Neue Allergien",
-		"Newinfections": "Neuinfektionen", 
-		"Digestion":"Verdauung",
-		"Diaryentry":"Tagebucheintrag",
-		"Newdoctorvisits":"Neue Arztbesuche",
-		"Newhospitalizations":"Neue Krankenhausaufenthalte",
-		"EmailExists":"E-Mail ist bereits vorhanden, bitte verwenden Sie eine andere E-Mail.",
-		"alredypatientFav":"Sie befinden sich bereits auf der privaten Arztliste des Patienten",
-		"Submit":"einreichen",
-		"select_Language":"Sprache wählen",
-		"DeleteMessages" :"Nachricht löschen",
-		"marital_status":"Familienstand",
-		"select_marital_status":"Wählen Sie Familienstand",
-		"respiration":"Atmung",
+		"VaccinationTrial": "COVID-19-Impfstudie",
+		"SARSCoV_2_TEST": "SARS CoV-2 Ag-Test",
+		"time_of_vaccination": "Zeitpunkt der Impfung",
+		"Daydate": "Anzahl der Tage nach der Impfung",
+		"PositiveSARS": "Positiver SARS CoV-2 IgG, IgM, AG Test?",
+		"Chargenumberpicture": "Chargennummer Bild",
+		"VaccinationCharge": "Impfgebühr",
+		"DocAuthName": "Behörde / Krankenhaus / Arzt, der geimpft hat",
+		"Newdiagnoses": "Neue Diagnosen",
+		"Newmedication": "Neue Medikamente",
+		"Newallergies": "Neue Allergien",
+		"Newinfections": "Neuinfektionen",
+		"Digestion": "Verdauung",
+		"Diaryentry": "Tagebucheintrag",
+		"Newdoctorvisits": "Neue Arztbesuche",
+		"Newhospitalizations": "Neue Krankenhausaufenthalte",
+		"EmailExists": "E-Mail ist bereits vorhanden, bitte verwenden Sie eine andere E-Mail.",
+		"alredypatientFav": "Sie befinden sich bereits auf der privaten Arztliste des Patienten",
+		"Submit": "einreichen",
+		"select_Language": "Sprache wählen",
+		"DeleteMessages": "Nachricht löschen",
+		"marital_status": "Familienstand",
+		"select_marital_status": "Wählen Sie Familienstand",
+		"respiration": "Atmung",
 		"course_not_updt_cannt_reach_srvr": "Kurs wird nicht hinzugefügt. Kann nicht zum Server erreichen",
-		"CourseAddedMyCourses" : "Kurs erfolgreich in Meine Kurse hinzugefügt",
-		"RBPharmacy":"Vom Apotheker erhaltent",
-		"SentPrescriptions" :"Verschickte Rezepte",
-		"Enrolled" : "Eingeschrieben",
-		"UnableCancel" : "Sie können den Termin nicht absagen.",
-		"appointment_can_be_cancelled" : "Termin kann abgesagt werden:",
+		"CourseAddedMyCourses": "Kurs erfolgreich in Meine Kurse hinzugefügt",
+		"RBPharmacy": "Vom Apotheker erhaltent",
+		"SentPrescriptions": "Verschickte Rezepte",
+		"Enrolled": "Eingeschrieben",
+		"UnableCancel": "Sie können den Termin nicht absagen.",
+		"appointment_can_be_cancelled": "Termin kann abgesagt werden:",
 		"notmore24": "Bitte geben Sie weniger als 24 Stunden ein",
-		"NotAvailable":"Nicht verfügbar",
-		"Seemore10entries" : "Weitere 20 Einträge anzeigen",
-		"showOnlyOverview" : "Nur Übersicht anzeigen",
-		"view_demo":"Demo anzeigen",
-		"SMSEmailLanguage" :"SMS / E-Mail-Sprache",
-		"Noimageavailable" : "Kein Bild verfügbar",
-		"Prescriptionsuccessfullysent" :"Rezept erfolgreich gesendet",
-		"currencyLang":"Währung",
-		"choose_currency":"Währung wählen",
-		"cancel_subscription":"Kündigen Sie das Abonnement",
-		"r_u_want_cancel_sub":"Möchten Sie das Abonnement wirklich kündigen?",
-		"email_rcv_update_reciept":"E-Mail erhalten Sie Updates und Quittungen auf",
-		"upload_license_is" :"Hochgeladene Lizenz ist",
-		"less_than_err":"Bitte laden Sie Bilder mit weniger als 6 . hoch",
+		"NotAvailable": "Nicht verfügbar",
+		"Seemore10entries": "Weitere 20 Einträge anzeigen",
+		"showOnlyOverview": "Nur Übersicht anzeigen",
+		"view_demo": "Demo anzeigen",
+		"SMSEmailLanguage": "SMS / E-Mail-Sprache",
+		"Noimageavailable": "Kein Bild verfügbar",
+		"Prescriptionsuccessfullysent": "Rezept erfolgreich gesendet",
+		"currencyLang": "Währung",
+		"choose_currency": "Währung wählen",
+		"cancel_subscription": "Kündigen Sie das Abonnement",
+		"r_u_want_cancel_sub": "Möchten Sie das Abonnement wirklich kündigen?",
+		"email_rcv_update_reciept": "E-Mail erhalten Sie Updates und Quittungen auf",
+		"upload_license_is": "Hochgeladene Lizenz ist",
+		"less_than_err": "Bitte laden Sie Bilder mit weniger als 6 . hoch",
 		"err_file_formart": "System wird dieses Dateiformat nicht unterstützt",
-		"reallyWantDelete" : "Möchten Sie Ihr Konto wirklich löschen?",
-		"looseAllData" :"Sie werden alle Ihre Daten verlieren und niemand kann jemals wieder darauf zugreifen! Auch die in der Aimedis-Blockchain gespeicherten Informationen sind für immer verloren, da Sie der einzige sind, der sie sehen kann.",
-		"delete_your_account":"Lösche deinen Account",
-      	"delete_account":"Konto löschen",
-		"ConversationList" :"Gesprächsliste",
-		"ContactList" :"Kontaktliste",
-		"searchingLoading" : "Suche wird geladen...",
-		"Symptoms":"Symptome",
-		"Better_experience":"Dieses Tool kann verwendet werden, um Ihren Zustand nach einer Covid-19-Erkrankung zu verfolgen. Bitte tragen Sie mindestens einmal pro Woche Symptome, Ihren Zustand etc. ein, indem Sie dieses Formular ausfüllen. Bei Bedarf können Sie sich an unseren Covid-19-Berater wenden, mehr über Ihren Zustand erfahren und die Folgen von Covid-19 besser managen",
-		"energy_level_determine":"Bitte ermitteln Sie Ihr Energieniveau.",
-		"Fatique_questions":"Ermüdungsfragen (basierend auf der Kinder-Ermüdungs-Skala)",
-		"problem_with_tiredness":"Haben Sie Probleme mit Müdigkeit?+++",
-		"rest_more":"Müssen Sie sich mehr ausruhen?",
-		"sleepy_drowsy":"Fühlen Sie sich schläfrig oder schläfrig?",
-		"starting_things":"Haben Sie Probleme, Dinge zu starten?",
-		"lack_energy":"Fehlt Ihnen Energie?",
-		"your_muscles":"Haben Sie weniger Kraft in Ihren Muskeln?",
-		"feel_week":"Fühlen Sie sich schwach?",
-		"difficulties_concentrating":"Haben Sie Schwierigkeiten sich zu konzentrieren?",
-		"tongue_when_speaking":"Versprechen Sie sich beim Sprechen?",
-		"right_word":"Fällt es Ihnen schwerer, das richtige Wort zu finden?",
-		"Fatique":"Ermüdung",
-		"Headache":"Kopfschmerzen",
-		"Shortness_of_breath":"Kurzatmigkeit",
-		"loss_smell":"Geruchsverlust",
-		"Persistent_cough":"Anhaltender Husten",
-		"Sore_throat":"Halsschmerzen",
-		"Fever":"Fieber",
-		"muscle_pain":"Ungewöhnliche Muskelschmerzen",
-		"Skipped_meals":"Ausgelassene Mahlzeiten",
-		"Chest_pain":"Brustschmerzen",
-		"Diarrhea":"Durchfall",
-		"Hoarse_voice":"Heisere Stimme",
-		"Abdominal_pain":"Bauchschmerzen",
-		"Delirium":"Delirium",
-		"Oxygen_therapy":"Sauerstoff Therapie",
-		"ECMOtherapy":"ECMO-Therapie",
-		"Sepsis":"Sepsis",
-		"Multiorgan_failure":"Multiorganversagen",
+		"reallyWantDelete": "Möchten Sie Ihr Konto wirklich löschen?",
+		"looseAllData": "Sie werden alle Ihre Daten verlieren und niemand kann jemals wieder darauf zugreifen! Auch die in der Aimedis-Blockchain gespeicherten Informationen sind für immer verloren, da Sie der einzige sind, der sie sehen kann.",
+		"delete_your_account": "Lösche deinen Account",
+		"delete_account": "Konto löschen",
+		"ConversationList": "Gesprächsliste",
+		"ContactList": "Kontaktliste",
+		"searchingLoading": "Suche wird geladen...",
+		"Symptoms": "Symptome",
+		"Better_experience": "Dieses Tool kann verwendet werden, um Ihren Zustand nach einer Covid-19-Erkrankung zu verfolgen. Bitte tragen Sie mindestens einmal pro Woche Symptome, Ihren Zustand etc. ein, indem Sie dieses Formular ausfüllen. Bei Bedarf können Sie sich an unseren Covid-19-Berater wenden, mehr über Ihren Zustand erfahren und die Folgen von Covid-19 besser managen",
+		"energy_level_determine": "Bitte ermitteln Sie Ihr Energieniveau.",
+		"Fatique_questions": "Ermüdungsfragen (basierend auf der Kinder-Ermüdungs-Skala)",
+		"problem_with_tiredness": "Haben Sie Probleme mit Müdigkeit?+++",
+		"rest_more": "Müssen Sie sich mehr ausruhen?",
+		"sleepy_drowsy": "Fühlen Sie sich schläfrig oder schläfrig?",
+		"starting_things": "Haben Sie Probleme, Dinge zu starten?",
+		"lack_energy": "Fehlt Ihnen Energie?",
+		"your_muscles": "Haben Sie weniger Kraft in Ihren Muskeln?",
+		"feel_week": "Fühlen Sie sich schwach?",
+		"difficulties_concentrating": "Haben Sie Schwierigkeiten sich zu konzentrieren?",
+		"tongue_when_speaking": "Versprechen Sie sich beim Sprechen?",
+		"right_word": "Fällt es Ihnen schwerer, das richtige Wort zu finden?",
+		"Fatique": "Ermüdung",
+		"Headache": "Kopfschmerzen",
+		"Shortness_of_breath": "Kurzatmigkeit",
+		"loss_smell": "Geruchsverlust",
+		"Persistent_cough": "Anhaltender Husten",
+		"Sore_throat": "Halsschmerzen",
+		"Fever": "Fieber",
+		"muscle_pain": "Ungewöhnliche Muskelschmerzen",
+		"Skipped_meals": "Ausgelassene Mahlzeiten",
+		"Chest_pain": "Brustschmerzen",
+		"Diarrhea": "Durchfall",
+		"Hoarse_voice": "Heisere Stimme",
+		"Abdominal_pain": "Bauchschmerzen",
+		"Delirium": "Delirium",
+		"Oxygen_therapy": "Sauerstoff Therapie",
+		"ECMOtherapy": "ECMO-Therapie",
+		"Sepsis": "Sepsis",
+		"Multiorgan_failure": "Multiorganversagen",
 		"past_date": "Vergangenes Datum",
-		"how_memory":"Haben Sie Gedächtnisprobleme?",
-		"long_covid":"Long-Covid-Tool",
-		"energy_lavel_determine":"Bitte bestimmen Sie Ihr Energieniveau",
-		"EnergyManagement":"Energiemanagement",
-		"CovidElearning":"Covid-E-Learning",
-		"Exercise":"Übung",
-		"ChatwithCovidconsultant":"Chat mit Covid-Berater",
-		"Currentpaincondition":"Aktueller Schmerzzustand",
-		"verifyAccount":"Ihr Konto ist nicht verifiziert, überprüfen Sie bitte Ihr E-Mail-Konto.",
+		"how_memory": "Haben Sie Gedächtnisprobleme?",
+		"long_covid": "Long-Covid-Tool",
+		"energy_lavel_determine": "Bitte bestimmen Sie Ihr Energieniveau",
+		"EnergyManagement": "Energiemanagement",
+		"CovidElearning": "Covid-E-Learning",
+		"Exercise": "Übung",
+		"ChatwithCovidconsultant": "Chat mit Covid-Berater",
+		"Currentpaincondition": "Aktueller Schmerzzustand",
+		"verifyAccount": "Ihr Konto ist nicht verifiziert, überprüfen Sie bitte Ihr E-Mail-Konto.",
 		"needUnblock": "Ihr Konto ist noch nicht entsperrt, bitte geben Sie Ihren Berufsausweis an oder geben Sie uns bitte bis zu 24 Stunden Zeit, um es zu entsperren, falls Sie es kürzlich eingereicht haben.",
 		"fillreptcha": "Bitte füllen Sie das RECAPTCHA aus",
-		"Tachykardia":"Tachykardie"
+		"Tachykardia": "Tachykardie"
 	}
 }
