--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -56,6 +56,7 @@
 		"I_agree_to_our": "By clicking the box I agree to our terms of use and accept the data collection, data processing and the use of my personal data. More in our privacy policy.",
 		"Staff_SENDREC": "SEND RECRUITMENT FORM",
 		"profile": "Profile",
+		"created_user_id_and_pin":"Created user id and pin",
 		"information": "Information",
 		"profile_info": "This is your profile information, which is accessible to your trusted doctors and those you share your Profile ID and PIN with.",
 		"ID": "ID",
