--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -378,6 +378,7 @@
 		"Staff_SENDREC": "STUUR WERVINGSFORMULIER",
 		"profile": "Profiel",
 		"information": "Informatie",
+		"created_user_id_and_pin":"Gebruikers-ID en pin gemaakt",
 		"profile_info": "Dit is jouw profielinformatie, dat toegankelijk is voor jouw vertrouwde Dokters en zij met wie je jouw Profiel ID en PIN hebt gedeeld.",
 		"ID": "ID",
 		"speciality": "Specialiteit",
