--- a/src/translations/tr.json
+++ b/src/translations/tr.json
@@ -57,6 +57,7 @@
 		"Staff_SENDREC": "IŞE ALMA FORMUNU GÖNDER",
 		"profile": "Profil",
 		"information": "Bilgi",
+		"created_user_id_and_pin": "Oluşturulan kullanıcı kimliği ve pin",
 		"profile_info": "Bu senin profil bilgindir ve yanlızca güvendiğin doktorlar ve kullanıcı kimliğini ve şifreni paylaştığın insanlar tarafından ulaşabilinir.",
 		"ID": "Kullanıcı kimliği",
 		"speciality": "Uzmanlık",
@@ -259,7 +260,7 @@
 		"connect": "Bağla",
 		"devices": "Cihazlar",
 		"services": "Hizmetler",
-		"Price":"Fiyat",
+		"Price": "Fiyat",
 		"search_for_device_palce": " Cihazları veya hizmet ismini ara...",
 		"view_details": "Detaylara bak",
 		"Details": "Detaylar",
@@ -288,7 +289,7 @@
 		"time_created": "Zaman ayarlandı",
 		"ur_emergancy_data": "Ilk yardım bilgilerin",
 		"extra": "Ekstra",
-		"language_all":"Dil: Tümü",
+		"language_all": "Dil: Tümü",
 		"srvc": "Hizmet",
 		"activated": "Açık",
 		"past_apointment": "Geçmiş terminler",
@@ -535,7 +536,7 @@
 		"get_patient_access_data": "Hastanın giriş bilgilerini al",
 		"id_pin_not_correct": "Kimlik veya şifre doğru değil",
 		"healthcare_access_for_non_conn_patient": "Bağlanmamış hasta için sağlık bilgi girişi",
-	 	"enter_pin": "Şifreyi tuşla",
+		"enter_pin": "Şifreyi tuşla",
 		"accept": "Onayla",
 		"pharma_prescription": "Eczane reçetesi",
 		"send_prescription_to_pharmacy": "Reçeteyi eczanelere gönder",
@@ -580,7 +581,8 @@
 		"appointment_can_be_booked": "Termin rezerve edilebilir:",
 		"up_to_days": "Günlere kadar",
 		"Max": "Maksimal",
-		"before_day_of_appointment": " Termin gününden önce",				"hourse_before_time_appointment": "Termin saatinden saatler önce",
+		"before_day_of_appointment": " Termin gününden önce",
+		"hourse_before_time_appointment": "Termin saatinden saatler önce",
 		"add_new_patient": "Yeni hasta ekle",
 		"find_patient": "Hasta bul...",
 		"patient_data_access": "Hasta bilgi girişi",
@@ -632,7 +634,7 @@
 		"sickcsrtificates": "Doktor raporları",
 		"ScndOpinion": "Ikinci fikirler",
 		"Contact": "Kontak",
-		"Services": "Hizmetler", 
+		"Services": "Hizmetler",
 		"latest_info": "Son bilgiler",
 		"fors": "için",
 		"Enteremailfirst": "Ilk olarak emayi yaz",
@@ -784,7 +786,7 @@
 		"no_allergies": "Allerjiler yok",
 		"no_diagnoses": "Diyagnozlar yok",
 		"free_remarks": "Boş not",
-		"relation": "Bağlantı", 
+		"relation": "Bağlantı",
 		"nurology": "Nöroloji",
 		"no_data_yet": "Henüz bilgi yok",
 		"confirmed": "Onaylandı",
@@ -797,7 +799,6 @@
 		"cancel_my_app": "Terminlerimi iptal et",
 		"cancel_appoint": "Terminleri iptal et",
 		"calender_view": "Takvime bak",
-
 		"past_appointments": "Son terminler",
 		"select_spec": "Uzmanlık alanı seç",
 		"appoint_type": "Termin tipi",
@@ -855,7 +856,7 @@
 		"poor": "Zayıf",
 		"audio": "Audio",
 		"blocked_users": "Bloke edilmiş kullanıcı",
-		"actions": "Aksiyonlar", 		
+		"actions": "Aksiyonlar",
 		"sending": "Gönderiliyor",
 		"unblock": "Blokajı kaldır",
 		"contacts": "Kontaklar",
@@ -912,18 +913,18 @@
 		"your_app_calender": "Terminin takvimde görünüyor",
 		"no_time_slot": "Bu tarih için boş zaman yok",
 		"going_offline": "Para ödeme, Para çekme, cihazlar cevrimdışı kalıyorlar",
-		"you_will_get": "Eğer önemli etkinlikler olursa o zaman güncelleme olacak", 
+		"you_will_get": "Eğer önemli etkinlikler olursa o zaman güncelleme olacak",
 		"by_clicking": "Hesap açarak onaylıyorum",
 		"term_of_use": "Kullanma koşulları",
 		"two_days_ago": "2 gün önce",
-		"three_to_6_days_ago": "3-6 gün önce", 
+		"three_to_6_days_ago": "3-6 gün önce",
 		"updated_track": "Güncellenmiş iz",
 		"added_success": "Başarılı bir şekilde eklendi",
 		"sick_cert_found": "Hasta belge bilgileri bulundu",
 		"sick_cert_not_found": "Hasta belge bilgileri bulunamadı",
 		"pre_data_found": "Reçete bilgisi bulundu",
 		"error_getting_token": "Hata oldu",
-		"error_in_track": "Iz bulunamadı", 
+		"error_in_track": "Iz bulunamadı",
 		"pre_data_not_found": "Reçete bilgisi bulunamadı",
 		"sick_doc_found": "Doktor hasta rapor bilgisi bulundu",
 		"sick_doc_not_found": "Doktor hasta rapor bilgisi bulunamadı",
@@ -960,7 +961,7 @@
 		"not_allowed": "HAYIR, hiçbir organımın veya dokumun nakline MÜSAADE ETMIYORUM",
 		"exclude_some": "EVET, bu organlar / dokular hariç müsaade ediyorum:",
 		"include_some": "EVET, yanlızca bu organlar / dokular için müsaade ediyorum:",
-		"yes_to_all": "EVET, doktorların ölümümü tespit ettiklerinden sonra bir veya daha fazla organın / dokuların nakliyesine müsaade ediyorum", 
+		"yes_to_all": "EVET, doktorların ölümümü tespit ettiklerinden sonra bir veya daha fazla organın / dokuların nakliyesine müsaade ediyorum",
 		"first_last_hos": "Hastane ziyaretin ilk & son günü",
 		"archive_entry_q": "Bu kayıtı arşivlemek istediğinden emin misin",
 		"remove_this": "Bunu kaldırmak istediğinden emin misin?",
@@ -981,12 +982,13 @@
 		"invite_doc": "Doktorlar davet et",
 		"pharmacy_access": "Eczane girişi",
 		"cart_removed": "Ürün sepetin içinden başarılı bir şekilde çıkartılmıştır",
-		"pay_with": "Bununla öde", 
+		"pay_with": "Bununla öde",
 		"full_report": "Tüm rapor",
 		"item_added_to_wishlist": "Ürün istek listesine başarılı bir şekilde eklenmiştir",
 		"item_present_in_cart": "Ürün sepetin içinde mevcut",
 		"previous_lesson": "Önceki ders",
-		"next_lesson": "Gelecek ders",		"rating_sent_success": "Değerlendirme gönderilmiştir",
+		"next_lesson": "Gelecek ders",
+		"rating_sent_success": "Değerlendirme gönderilmiştir",
 		"plz_give_rate": "Lütfen değerlendir",
 		"clear_point": "Puanları sil",
 		"language_updated": "Dil güncellendi.",
@@ -1009,7 +1011,7 @@
 		"registration": "Kayıt",
 		"plz_fill_time_duration_appointment": "Lütfen terminin süresini belirle",
 		"set_online_working_hour": "Online çalışma saatleri belirle",
-		"monday": "Pazartesi",		
+		"monday": "Pazartesi",
 		"tuseday": "Salı",
 		"wednesday": "Çarşamba",
 		"thursday": "Perşembe",
@@ -1038,7 +1040,7 @@
 		"paymnt_processed": "Ödeme tamamlandı",
 		"paymnt_err": "Ödeme hatası",
 		"pay_with_stripe": "Stripe ile öde",
-		"frequency": "Sıklık",		
+		"frequency": "Sıklık",
 		"relaxed": "Rahat",
 		"stressed": "Stresli",
 		"plz_fill_mob_number": "Lütfen cep telefonu numarasi yaz",
@@ -1047,13 +1049,13 @@
 		"plz_enter_email_id_patient": "Lütfen hastanın E-posta adresini veya kimligini yaz",
 		"unknown": "Belirsiz",
 		"there_r_the": "Var",
-		"plz_check_unread_message_in_chat": "Chat‘de okunmamış mesajlar var. Şimdi lütfen kontrol et.", 
-		"new_message_in_chat_plz_check":"Yeni mesaj(lar) chat bölümünde var. Lütfen CHAT‘e (baglantı) geç mesajlarını görmek için.",
+		"plz_check_unread_message_in_chat": "Chat‘de okunmamış mesajlar var. Şimdi lütfen kontrol et.",
+		"new_message_in_chat_plz_check": "Yeni mesaj(lar) chat bölümünde var. Lütfen CHAT‘e (baglantı) geç mesajlarını görmek için.",
 		"remove_inquiry": "Yarayı kaldır?",
 		"archive_item": "Ürünü arşivle",
 		"do_u_really_want_archive_item": "Ürünü arşivlemek istediğinden emin misin?",
 		"delete_item": "Ürünü sil",
-		"do_u_really_want_delete_item": "Ürünü silmek istediğinden emin misin?", 
+		"do_u_really_want_delete_item": "Ürünü silmek istediğinden emin misin?",
 		"plz_upload_png_jpeg": "Lütfen PNG ve JPEG dosyaları yükle",
 		"r_u_sure_want_book_appointment": "Bu termini kaydetmek istediğinden emin misin?",
 		"r_u_sure_remove_patient": "Hastayı kaldırmak istediğinden emin misin?",
@@ -1062,14 +1064,14 @@
 		"download_file": "Dosyayı indir",
 		"capab_Doctors1": "Doktor",
 		"capab_Patients1": "Hasta",
-		"Nurse1": "Hemşire", 
-		"enabled":"aktifleştirilmiş",
-		"disabled":"devre dışı", 
+		"Nurse1": "Hemşire",
+		"enabled": "aktifleştirilmiş",
+		"disabled": "devre dışı",
 		"Select_chat": "Mesajlaşmak için bir chat seç",
 		"Search": "Ara",
 		"Date_of_event": "Etkinliğin tarihi",
 		"consultancy_appintment": "Danışma termini",
-		"pin_greater_then_4" : "Şifre 3 karakterden fazla oluşmalı",
+		"pin_greater_then_4": "Şifre 3 karakterden fazla oluşmalı",
 		"are_u_sue_appo": "Are you sure you want to book this appointment?",
 		"Appointment": "Termin",
 		"activities": "Faaliyetler",
@@ -1133,7 +1135,7 @@
 		"date_from": "Bu tarihden",
 		"date_to": "Bu tarihe",
 		"pls_fill_duration": "Lütfen terminin zaman çerçeve sürecini yaz",
-		"offline": "Çevrimdışı", 
+		"offline": "Çevrimdışı",
 		"unblock_user": "Kullanıcının blokajını kaldır",
 		"block_user": "Kullanıcıyı blokla",
 		"Options": "Seçenekler",
@@ -1144,115 +1146,115 @@
 		"ended_call_with": "…‘le konuşma bitti",
 		"cancelled_call_with": "…‘le konuşma iptal edildi",
 		"minutes": "dakikalar",
-		"InsurancecompanyError" : "Lütfen Ezcane / Araştırma / Sigorta şirketin ülkesini ve Eczane / Araştırma / Sigorta şirketini doldur.",
-		"StartDate" :"Başlangıç tarihi",
-		"EndDate" :"Bitiş tarihi",
-		"Loading":"Yüklüyor...",
-		"goto_top":"Başlangıca dön",
-		"Consultancy_custom_calendar" : "Danışma (takvim)",
-		"Calling" :"Aranıyor...",
+		"InsurancecompanyError": "Lütfen Ezcane / Araştırma / Sigorta şirketin ülkesini ve Eczane / Araştırma / Sigorta şirketini doldur.",
+		"StartDate": "Başlangıç tarihi",
+		"EndDate": "Bitiş tarihi",
+		"Loading": "Yüklüyor...",
+		"goto_top": "Başlangıca dön",
+		"Consultancy_custom_calendar": "Danışma (takvim)",
+		"Calling": "Aranıyor...",
 		"incomingcall": "Gelen arama",
 		"Online": "online",
 		"Offline": "çevrimdışı ",
 		"Lao": "Son görülme:",
-		"VaccinationTrial":"COVID-19 aşılama denemesi",
-		"SARSCoV_2_TEST":"SARS CoV-2 Ag-Testi",
-		"time_of_vaccination" :"Aşılamanın saati",
-		"Daydate":"Aşılanmadan sonraki gün sayısı",
-		"PositiveSARS" :"Pozitif SARS CoV-2 IgG, IgM, AG testi?",
-		"Chargenumberpicture" :"Resmin sarj numarası",
-		"VaccinationCharge":"Aşı sarjı",
-		"DocAuthName" :"Aşılayan Otorite / hastane / doktor",
-		"Newdiagnoses" :"Yeni diyagnozlar",
-		"Newmedication" :"Yeni ilaç",
-		"Newallergies":"Yeni allerjiler",
-		"Newinfections":"Yeni enfeksiyonlar", 
-		"Digestion":"Sindirim",
-		"Diaryentry":"Günlük kayıtı",
-		"Newdoctorvisits":"Yeni doktor ziyaretleri",
-		"Newhospitalizations":"Yeni klinikte kalma süreci",
-		"EmailExists":"Bu E-posta adresi bulunuyor, lütfen başka bir emay kullan.",
-		"alredypatientFav":"Hastanın özel doktor listesinde bulunuyorsun",
-		"Submit":"Gönder",
-		"select_Language":"Dil seç",
-		"DeleteMessages" :"Mesajı sil",
-		"less_than_err":"Lütfen 6’dan az resim yükle",
+		"VaccinationTrial": "COVID-19 aşılama denemesi",
+		"SARSCoV_2_TEST": "SARS CoV-2 Ag-Testi",
+		"time_of_vaccination": "Aşılamanın saati",
+		"Daydate": "Aşılanmadan sonraki gün sayısı",
+		"PositiveSARS": "Pozitif SARS CoV-2 IgG, IgM, AG testi?",
+		"Chargenumberpicture": "Resmin sarj numarası",
+		"VaccinationCharge": "Aşı sarjı",
+		"DocAuthName": "Aşılayan Otorite / hastane / doktor",
+		"Newdiagnoses": "Yeni diyagnozlar",
+		"Newmedication": "Yeni ilaç",
+		"Newallergies": "Yeni allerjiler",
+		"Newinfections": "Yeni enfeksiyonlar",
+		"Digestion": "Sindirim",
+		"Diaryentry": "Günlük kayıtı",
+		"Newdoctorvisits": "Yeni doktor ziyaretleri",
+		"Newhospitalizations": "Yeni klinikte kalma süreci",
+		"EmailExists": "Bu E-posta adresi bulunuyor, lütfen başka bir emay kullan.",
+		"alredypatientFav": "Hastanın özel doktor listesinde bulunuyorsun",
+		"Submit": "Gönder",
+		"select_Language": "Dil seç",
+		"DeleteMessages": "Mesajı sil",
+		"less_than_err": "Lütfen 6’dan az resim yükle",
 		"err_file_formart": "Sistem bu dosya formatını desteklemiyor",
-		"marital_status":"Evlilik durumu",
-		"select_marital_status":"Evlilik durumu seç",
-		"respiration":"Respirasyon",
+		"marital_status": "Evlilik durumu",
+		"select_marital_status": "Evlilik durumu seç",
+		"respiration": "Respirasyon",
 		"course_not_updt_cannt_reach_srvr": "Kurs eklenmedi. Servere ulaşılamıyor",
-		"CourseAddedMyCourses" : "Kurs başarılı bir şekilde Benim kurslarıma eklendi",
-		"RBPharmacy":"Eczacıdan alındı",
-		"SentPrescriptions" :"Reçeteler gönderildi",
-		"Enrolled" : "Kayıt edildi",
-		"UnableCancel" : "Termini iptal edemezsin.",
-		"appointment_can_be_cancelled" : "Termin iptal edilebilir:",
+		"CourseAddedMyCourses": "Kurs başarılı bir şekilde Benim kurslarıma eklendi",
+		"RBPharmacy": "Eczacıdan alındı",
+		"SentPrescriptions": "Reçeteler gönderildi",
+		"Enrolled": "Kayıt edildi",
+		"UnableCancel": "Termini iptal edemezsin.",
+		"appointment_can_be_cancelled": "Termin iptal edilebilir:",
 		"notmore24": "24 saatden az bir süreç ver",
-		"NotAvailable":"Bulunamadı",
-		"Seemore10entries" : "20 kayıttan fazla göster",
-		"showOnlyOverview" : "Sadece özeti göster",
-		"view_demo":"Demoya bak",
-		"SMSEmailLanguage" :"SMS / Emay Dili",
-		"Noimageavailable" : "Resim bulunamadı",
-		"Prescriptionsuccessfullysent" :"Reçete başarılı bir şekilde gönderildi",
-        "currencyLang":"Para birimi",
-		"choose_currency":"Para Birimini Seç",
-		"cancel_subscription":"Aboneliği iptal et",
-		"r_u_want_cancel_sub":"Aboneliği gerçekten iptal etmek istiyor musunuz?",
-		"email_rcv_update_reciept":"Güncellemeleri ve makbuzları alacağınız e-posta",
-		"upload_license_is" :"Yüklenen lisans",
-		"reallyWantDelete" : "Hesabınızı gerçekten silmek istiyor musunuz?",
-		"looseAllData" :"Tüm verilerinizi kaybedeceksiniz ve bir daha hiç kimse ona erişemeyecek! Ayrıca Aimedis blok zincirinde saklanan bilgiler, onu görebilecek tek kişi siz olduğunuz için sonsuza kadar kaybolur.",
-		"delete_your_account":"Hesabını sil",
-      	"delete_account":"Hesabı sil",
-		"ConversationList" :"konuşma listesi",
-		"ContactList" :"Kişi listesi",
-		"searchingLoading" : "Arama yükleniyor...",
-		"Symptoms":"Belirtiler",
-		"Better_experience":"Bu araç, bir Covid-19 hastalığından sonraki durumunuzu takip etmek için kullanılabilir. Lütfen haftada en az bir kez bu formu doldurarak belirtilerinizi, durumunuzu vb. giriniz. Gerekirse Covid-19 danışmanımızla iletişime geçebilir, durumunuz hakkında daha fazla bilgi alabilir ve Covid-19'un sonuçlarını daha iyi yönetebilirsiniz.",
-		"energy_level_determine":"Lütfen enerji seviyenizi belirleyin.",
-		"Fatique_questions":"Yorgun sorular (Çocuk-Yorgunluk Ölçeğine göre)",
-		"problem_with_tiredness":"Yorgunlukla ilgili sorunlarınız mı var?",
-		"rest_more":"Daha fazla dinlenmeye mi ihtiyacınız var?",
-		"sleepy_drowsy":"Uykulu veya uykulu hissediyor musunuz?",
-		"starting_things":"Bir şeylere başlamakta sorun mu yaşıyorsunuz?",
-		"lack_energy":"Enerjiniz mi eksik?",
-		"your_muscles":"Kaslarınızda daha az güç mü var?",
-		"feel_week":"Zayıf hissediyor musun?",
-		"difficulties_concentrating":"Konsantre olmakta zorluk çekiyor musunuz?",
-		"tongue_when_speaking":"Konuşurken dil sürçmeleri yapıyor musunuz?",
-		"right_word":"Doğru kelimeyi bulmak daha mı zor?",
-		"Fatique":"Tükenmişlik",
-		"Headache":"Baş ağrısı",
-		"Shortness_of_breath":"Nefes darlığı",
-		"loss_smell":"koku kaybı",
-		"Persistent_cough":"Kalıcı öksürük",
-		"Sore_throat":"Boğaz ağrısı",
-		"Fever":"Ateş",
-		"muscle_pain":"Olağandışı kas ağrısı",
-		"Skipped_meals":"Atlanan öğünler",
-		"Chest_pain":"Göğüs ağrısı",
-		"Diarrhea":"İshal",
-		"Hoarse_voice":"Boğuk ses",
-		"Abdominal_pain":"Karın ağrısı",
-		"Delirium":"deliryum",
-		"Oxygen_therapy":"Oksijen terapisi",
-		"ECMOtherapy":"ECMO tedavisi",
-		"Sepsis":"Sepsis",
-		"Multiorgan_failure":"çoklu organ yetmezliği",
+		"NotAvailable": "Bulunamadı",
+		"Seemore10entries": "20 kayıttan fazla göster",
+		"showOnlyOverview": "Sadece özeti göster",
+		"view_demo": "Demoya bak",
+		"SMSEmailLanguage": "SMS / Emay Dili",
+		"Noimageavailable": "Resim bulunamadı",
+		"Prescriptionsuccessfullysent": "Reçete başarılı bir şekilde gönderildi",
+		"currencyLang": "Para birimi",
+		"choose_currency": "Para Birimini Seç",
+		"cancel_subscription": "Aboneliği iptal et",
+		"r_u_want_cancel_sub": "Aboneliği gerçekten iptal etmek istiyor musunuz?",
+		"email_rcv_update_reciept": "Güncellemeleri ve makbuzları alacağınız e-posta",
+		"upload_license_is": "Yüklenen lisans",
+		"reallyWantDelete": "Hesabınızı gerçekten silmek istiyor musunuz?",
+		"looseAllData": "Tüm verilerinizi kaybedeceksiniz ve bir daha hiç kimse ona erişemeyecek! Ayrıca Aimedis blok zincirinde saklanan bilgiler, onu görebilecek tek kişi siz olduğunuz için sonsuza kadar kaybolur.",
+		"delete_your_account": "Hesabını sil",
+		"delete_account": "Hesabı sil",
+		"ConversationList": "konuşma listesi",
+		"ContactList": "Kişi listesi",
+		"searchingLoading": "Arama yükleniyor...",
+		"Symptoms": "Belirtiler",
+		"Better_experience": "Bu araç, bir Covid-19 hastalığından sonraki durumunuzu takip etmek için kullanılabilir. Lütfen haftada en az bir kez bu formu doldurarak belirtilerinizi, durumunuzu vb. giriniz. Gerekirse Covid-19 danışmanımızla iletişime geçebilir, durumunuz hakkında daha fazla bilgi alabilir ve Covid-19'un sonuçlarını daha iyi yönetebilirsiniz.",
+		"energy_level_determine": "Lütfen enerji seviyenizi belirleyin.",
+		"Fatique_questions": "Yorgun sorular (Çocuk-Yorgunluk Ölçeğine göre)",
+		"problem_with_tiredness": "Yorgunlukla ilgili sorunlarınız mı var?",
+		"rest_more": "Daha fazla dinlenmeye mi ihtiyacınız var?",
+		"sleepy_drowsy": "Uykulu veya uykulu hissediyor musunuz?",
+		"starting_things": "Bir şeylere başlamakta sorun mu yaşıyorsunuz?",
+		"lack_energy": "Enerjiniz mi eksik?",
+		"your_muscles": "Kaslarınızda daha az güç mü var?",
+		"feel_week": "Zayıf hissediyor musun?",
+		"difficulties_concentrating": "Konsantre olmakta zorluk çekiyor musunuz?",
+		"tongue_when_speaking": "Konuşurken dil sürçmeleri yapıyor musunuz?",
+		"right_word": "Doğru kelimeyi bulmak daha mı zor?",
+		"Fatique": "Tükenmişlik",
+		"Headache": "Baş ağrısı",
+		"Shortness_of_breath": "Nefes darlığı",
+		"loss_smell": "koku kaybı",
+		"Persistent_cough": "Kalıcı öksürük",
+		"Sore_throat": "Boğaz ağrısı",
+		"Fever": "Ateş",
+		"muscle_pain": "Olağandışı kas ağrısı",
+		"Skipped_meals": "Atlanan öğünler",
+		"Chest_pain": "Göğüs ağrısı",
+		"Diarrhea": "İshal",
+		"Hoarse_voice": "Boğuk ses",
+		"Abdominal_pain": "Karın ağrısı",
+		"Delirium": "deliryum",
+		"Oxygen_therapy": "Oksijen terapisi",
+		"ECMOtherapy": "ECMO tedavisi",
+		"Sepsis": "Sepsis",
+		"Multiorgan_failure": "çoklu organ yetmezliği",
 		"past_date": "Geçmiş Tarih",
-		"how_memory":"Hafıza sorunlarınız mı var?",
-		"long_covid":"Uzun-Covid Aracı",
-		"energy_lavel_determine":"Lütfen enerji seviyenizi belirleyin",
-		"EnergyManagement":"Enerji yönetimi",
-		"CovidElearning":"Covid e-öğrenme",
-		"Exercise":"Egzersiz yapmak",
-		"ChatwithCovidconsultant":"Covid danışmanıyla sohbet et",
-		"Currentpaincondition":"Mevcut ağrı durumu",
-		"verifyAccount":"Hesabınız doğrulanmadı, lütfen e-posta hesabınızı kontrol edin.",
+		"how_memory": "Hafıza sorunlarınız mı var?",
+		"long_covid": "Uzun-Covid Aracı",
+		"energy_lavel_determine": "Lütfen enerji seviyenizi belirleyin",
+		"EnergyManagement": "Enerji yönetimi",
+		"CovidElearning": "Covid e-öğrenme",
+		"Exercise": "Egzersiz yapmak",
+		"ChatwithCovidconsultant": "Covid danışmanıyla sohbet et",
+		"Currentpaincondition": "Mevcut ağrı durumu",
+		"verifyAccount": "Hesabınız doğrulanmadı, lütfen e-posta hesabınızı kontrol edin.",
 		"needUnblock": "Hesabınızın kilidi henüz açılmadı, lütfen profesyonel kimliğinizi sağlayın veya hesabı yakın zamanda gönderdiyseniz, kilidini açmamız için lütfen bize 24 saat verin.",
-		"fillreptcha":"Lütfen RECAPTCHA'yı doldurun",
-		"Tachykardia":"taşikardi"		
+		"fillreptcha": "Lütfen RECAPTCHA'yı doldurun",
+		"Tachykardia": "taşikardi"
 	}
-}   
+}
