JIra ticket -> 376 for dark theme

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1574,6 +1574,7 @@
 		"SaveDraft": "Save Draft",
 		"Entries":"Entries",
 		"PatientInInvoice": "Patient In invoice",
-		"Question": "Question"
+		"Question": "Question",
+		"created_user_id_and_pin":"Created user id and pin"
 	}
 }
