--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -1254,7 +1254,7 @@
 		"Currentpaincondition":"Condição de dor atual",
 		"verifyAccount":"Sua conta não foi verificada, por favor, verifique sua conta de e-mail.",
 		"needUnblock": "Sua conta ainda não está desbloqueada, forneça sua identificação profissional ou, se você a enviou recentemente, dê-nos até 24 horas para desbloqueá-la.",
-		"fillreptcha": "Por favor, preencha o RECAPTCHA",
+		"fillreptcha": "Por favor, preencha o reCAPTCHA",
 		"Tachykardia":"Taquicardia"
 	}
 }
