Validation Translation of Register page

--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -1255,6 +1255,7 @@
 		"verifyAccount":"您的帐户未经验证，请检查您的电子邮件帐户。",
 		"needUnblock": "您的帐户尚未解锁，请提供您的职业 ID 或者如果您最近提交过，请给我们最多 24 小时解锁它。",
 		"fillreptcha": "请填写 reCAPTCHA",
-		"Tachykardia": "心动过速"
+		"Tachykardia": "心动过速",
+		"select_user_type": "请选择用户类型"
 	}
 }
