--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1264,6 +1264,7 @@
 		"verifyAccount":"Your Account is not verified, please check your email account.",
 		"needUnblock": "Your account is not unlocked yet, please provide your professional ID or if you have submitted it recently, please give us up to 24 hours to unlock it.",
 		"fillreptcha": "Please fill the reCAPTCHA",
+		"select_user_type": "Please select user type",
 		"Tachykardia": "Tachycardia",
 		"Billing": "Billing",
 		"Institution": "Institution",
