--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -1254,6 +1254,7 @@
 		"verifyAccount":"Su cuenta no está verificada, verifique su cuenta de correo electrónico.",
 		"needUnblock": "Su cuenta aún no está desbloqueada, proporcione su identificación profesional o, si la ha enviado recientemente, denos hasta 24 horas para desbloquearla.",
 		"fillreptcha": "Por favor complete el reCAPTCHA",
-		"Tachykardia":"Taquicardia"
+		"Tachykardia":"Taquicardia",
+		"select_user_type": "Seleccione el tipo de usuario"
 	}
 }
