Jira ticket - AVH-193, 394, 408

--- a/src/Screens/hospital_Admin/translations/de.json
+++ b/src/Screens/hospital_Admin/translations/de.json
@@ -628,6 +628,7 @@
 		"Status" :"Status",
 		"Liscence" :"Lizenz",
 		"more" :"Mehr",
-		"DarkMode": "Dunkler Modus"
+		"DarkMode": "Dunkler Modus",
+		"AssignHouse": "Assign Hospital"
 	}
 }
