--- a/src/Screens/hospital_Admin/translations/en_json_proofread_13072020.json
+++ b/src/Screens/hospital_Admin/translations/en_json_proofread_13072020.json
@@ -628,7 +628,8 @@
 		"two_fac_auth_enable":"The 2-factor authentication is activated",
 		"Status" :"Status",
 		"more" :"more",
-		"DarkMode": "Dark Mode"
+		"DarkMode": "Dark Mode",
+		"AssignHouse": "Assign Hospital"
 	}
 }
 
