--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1318,7 +1318,7 @@
 		"Attachments": "Attachments",
 		"Roomname": "Roomname",
 		"Bedsinroom": "Beds in room",
-		"AssignHouse": "Assign House",
+		"AssignHouse": "Assign Hospital",
 		"AddTask": "Add Task",
 		"AddSpecialty": "Add Speciality",
 		"ChangeStaff": "Change Staff",
