--- a/src/Screens/hospital_Admin/translations/de.json
+++ b/src/Screens/hospital_Admin/translations/de.json
@@ -629,6 +629,18 @@
 		"Liscence" :"Lizenz",
 		"more" :"Mehr",
 		"DarkMode": "Dunkler Modus",
-		"AssignHouse": "Assign Hospital"
+		
+		"AssignHouse": "Assign Hospital",
+		"InstituteGroups": "Institute Groups",
+		"EditGroup": "Edit Group",
+		"AddInstituteGroup": "+ Add Institute Group",
+		"AddInstitution": "Add Institution",
+		"UploadInstitutionLogo": "Upload Institution Logo",
+		"CurrentLogo": "Current Logo",
+		"UploadHospitalLogo": "Upload Hospital Logo",
+		"DescriptionNote": "Description Note",
+		"EditHospital": "Edit Hospital",
+		"EnterHospitals": "+ Enter Hospitals",
+		"AddHospital": "Add Hospital"
 	}
 }
