jira issues ticket -> 432, 430

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1592,13 +1592,24 @@
 		"DocumentMovedToArchive": "Document is moved to Archive",
 		"DocumentMovedToDocuments": "Document is moved to Documents",
 		"OpenCreateUserModelHospitalAdmin": "Open Create User Model (Hospital Admin)",
-		"create_new_user":"Create new user",
-		"Currentpassword":"Current password",
-		"Confirm_your_password":"Confirm your password",
-		"First_name":"First name",
+		"create_new_user": "Create new user",
+		"Currentpassword": "Current password",
+		"Confirm_your_password": "Confirm your password",
+		"First_name": "First name",
 		"Last_name": "Last name",
 		"Hospital": "Hospital",
-		"ShoworHide":"Show or Hide",
-		"Create": "Create"
+		"ShoworHide": "Show or Hide",
+		"Create": "Create",
+		"Patient journey": "Patientjourney",
+		"Questionnaire": "Questionnaire",
+		"Questionnaire_of": "Questionnaire of -",
+		"Final Submit": "FinalSubmit",
+		"Apply": "Apply",
+		"Applied": "Applied",
+		"ViewDemo": "View Demo",
+		"Patientflow": "Patient flow",
+		"ChangeHospital": "Change Hospital",
+		"Invoices": "Invoices",
+		"InvoicePattern": "Invoice Pattern"
 	}
 }
