--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1495,7 +1495,7 @@
 		"Hospital": "Hospital",
 		"ShoworHide": "Show or Hide",
 		"Create": "Create",
-		"Patient journey": "Patientjourney",
+		"Patientjourney": "Patient journey",
 		"Questionnaire": "Questionnaire",
 		"Questionnaire_of": "Questionnaire of -",
 		"Final Submit": "FinalSubmit",
@@ -1546,6 +1546,7 @@
 		"Task": "Task",
 		"ServiceName": "Service Name",
 		"General": "General",
-		"select_user_type": "Please select user type"
+		"select_user_type": "Please select user type",
+		"ProfessionalTask": "Professional Tasks"
 	}
 }
