--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1547,6 +1547,32 @@
 		"ServiceName": "Service Name",
 		"General": "General",
 		"select_user_type": "Please select user type",
-		"ProfessionalTask": "Professional Tasks"
+		"ProfessionalTask": "Professional Tasks",
+		"Entertitle" :"Enter title",
+		"FilterbyStaff":"Filter by Staff",
+		"FilterbySpeciality":"Filter by Speciality",
+		"FilterbyRoom":"Filter by Room",
+		"EnterWard":"Enter Ward",
+		"EnterServicename":"Enter Service name",
+		"Serviceshortdescription":"Service short description",
+		"Enterserviceshortdescription":"Enter service short description",
+        "Enterserviceprice":"Enter service price",
+		"Enteraquestion":"Enter a question",
+		"EnterSpecialityname":"Enter Speciality name",
+		"Enterchoice":"Enter choice",
+		"Enterquestion":"Enter question",
+		"Search&Select":"Search & Select",
+		"AllSpecialities":"All Specialities",
+		"SelectStepName":"Select Step Name",
+		"Name":"Name",
+		"Searchserviceoraddcustominput":"Search service or add custom input",
+		"Enterquantity":"Enter quantity",
+		"EnterTitlename":"Enter Title name",
+		"Filterbypatient":"Filter by patient",
+		"FilterbyWard":"Filter by Ward"
+		
+	
+		 
+		
 	}
 }
